<resources>
    <string name="app_name">UnNamed</string>
    <string name="title_activity_single_category">SingleCategory</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="db_mode">test</string>
    <string name="order_placed">Order Placed</string>
    <string name="thank_you_for_your_order">Thank you for your order</string>
    <string name="order_processing_text">we are currently processing your order.You can find updated to your order under Your Order</string>
    <string name="go_to_homepage">Go to homepage</string>
    <string name="your_order">Your Order</string>
    <string name="back_btn">back btn</string>
    <string name="running_shoes">Kedo running Shoes from Addidas</string>
    <string-array name="order_category_array">
        <item>Processing</item>
        <item>Confirmed</item>
        <item>Cancelled</item>
        <item>Completed</item>

    </string-array>
    <string-array name="category_array">
        <item>Electrical</item>
        <item>Civil</item>
        <item>Welding</item>
        <item>IT solution</item>

    </string-array>
    <string-array name="quantity_type_array">
        <item>NA</item>
        <item>KG</item>
        <item>L</item>

    </string-array>
    <string-array name="is_required_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="Rs">\u20B9</string>
    <string name="Rs100">\u20B9100</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="out_for_delivery">Your order is out for delivery</string>
    <string name="pincode">pincode *</string>
    <string name="house_no_building_name">House No,Building name *</string>
    <string name="road_name_area_colony">Road Name,Area,Colony *</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="name">name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="save">SAVE</string>
    <string name="tap_to_auto_fill_the_address_fields">Tap to auto fill the address fields.</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="gps_image">gps_image</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="rs_symbol">\u20B9</string>
</resources>
